Bug fix so that table-mobile will word-wrap: break-word
Fixes #8052

--- a/assets/app/styles/_tables.less
+++ b/assets/app/styles/_tables.less
@@ -16,7 +16,7 @@
     &.table-bordered-columns {
       > thead >tr > th, > tbody > tr > td {
         border: 1px solid @table-border-color;
-      }    
+      }
     }
   }
 }
@@ -45,12 +45,12 @@
   }
 }
 
-.table-borderless>tbody>tr>th, 
-.table-borderless>tfoot>tr>th, 
-.table-borderless>thead>tr>td, 
-.table-borderless>tbody>tr>td, 
+.table-borderless>tbody>tr>th,
+.table-borderless>tfoot>tr>th,
+.table-borderless>thead>tr>td,
+.table-borderless>tbody>tr>td,
 .table-borderless>tfoot>tr>td {
-  border-top: none; 
+  border-top: none;
 }
 
 .table .pull-spec {
@@ -96,6 +96,8 @@
 @media (max-width: @screen-xs-max) {
   .table-mobile {
     border-top: 2px solid @table-border-color;
+    // so that .word-break() will work
+    table-layout: fixed;
     thead, tbody, th, td, tr {
       display: block;
     }
@@ -123,8 +125,8 @@
             position: absolute;
             top: 8px;
             left: 6px;
-            width: 35%; 
-            padding-right: 10px; 
+            width: 35%;
+            padding-right: 10px;
             white-space: nowrap;
           }
         }
